# epanet-mcp-server

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.github/workflows/: linter.yml  test.yml
examples/: quickstart.py
src/epanet_mcp/: __init__.py  server.py  session.py  utils.py
src/epanet_mcp/tools/: __init__.py  inspection.py  modification.py  scenarios.py  simulation.py
tests/: conftest.py  test_inspection.py  test_modification.py  test_scenarios.py  test_simulation.py
