[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epanet-mcp-server"
version = "0.1.0"
description = "MCP server for EPANET water distribution network simulation via ePyT"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["epanet", "epyt", "mcp", "water-distribution", "hydraulic-simulation"]
dependencies = [
    "mcp>=1.0.0",
    "epyt>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
epanet-mcp-server = "epanet_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
